fixed layout issues with table and changed background color

--- a/gui/src/app/app.component.scss
+++ b/gui/src/app/app.component.scss
@@ -2,8 +2,6 @@
   width: 95vw;
   height: 78vh;
   margin: 2vh auto;
-}
-
-body {
-  background: black;
+  min-width: 1750px;
+  min-height: 1100px;
 }
