--- a/gui/src/app/components/magic-mirror-modules-table/magic-mirror-modules-table.component.scss
+++ b/gui/src/app/components/magic-mirror-modules-table/magic-mirror-modules-table.component.scss
@@ -9,3 +9,7 @@ mat-form-field {
 td {
   text-align: left !important;
 }
+
+table tr.mat-row {
+  height: 85px;
+}
